# pygmy-goose

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  pyproject.toml
.github/workflows/: Android.yml  BundleStaticLibs.yml  CodeQuality.yml  CrossVersion.yml  DockerTests.yml  ExtendedTests.yml  Extensions.yml  Julia.yml  LinuxRelease.yml  Main.yml  NightlyTests.yml  OSX.yml  Regression.yml  Swift.yml  Windows.yml  ci.yml  cifuzz.yml
core_functions/: CMakeLists.txt
scripts/: format.py  generate_functions.py  generate_serialization.py  package_build.py  split-repo.sh
src/: CMakeLists.txt
src/common/: enum_util.cpp  gzip_file_system.cpp  radix_partitioning.cpp  string_util.cpp
src/common/enums/: metric_type.cpp
src/common/types/: interval.cpp  vector.cpp
src/include/: duckdb.h
src/main/: config.cpp  database.cpp  profiling_utils.cpp
src/main/extension/: extension_helper.cpp
src/main/settings/: custom_settings.cpp
src/storage/serialization/: serialize_create_info.cpp  serialize_expression.cpp  serialize_logical_operator.cpp  serialize_macro_function.cpp  serialize_nodes.cpp  serialize_parse_info.cpp  serialize_parsed_expression.cpp  serialize_query_node.cpp  serialize_result_modifier.cpp  serialize_statement.cpp  serialize_storage.cpp  serialize_table_filter.cpp  serialize_tableref.cpp  serialize_types.cpp
test/: CMakeLists.txt  unittest.cpp
test/api/: test_appender_api.cpp
test/configs/: peg_parser_strict.json
tools/: CMakeLists.txt
tools/shell/: CMakeLists.txt
tools/shell/linenoise/: linenoise.cpp
(+185 files in other folders)
